fix alignment in menus

--- a/skins/larry/markasjunk2.css
+++ b/skins/larry/markasjunk2.css
@@ -32,20 +32,20 @@
 
 #markmessagemenu a.markasjunk2 span
 {
-  background-position: 2px -15px;
+  background-position: 1px -15px;
 }
 
 #markmessagemenu a.markasnotjunk2 span
 {
-  background-position: 2px 5px;
+  background-position: 1px 5px;
 }
 
 #rcmContextMenu .markasjunk2 a span
 {
-  background-position: 5px -18px;
+  background-position: 7px -18px;
 }
 
 #rcmContextMenu .markasnotjunk2 a span
 {
-  background-position: 5px 0;
+  background-position: 7px 0;
 }
